fix: mobile was profile.js misaligned

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -65,3 +65,9 @@ body {
     min-width: 400px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .user-info {
+    min-width: 200px;
+  }
+}
